# pelican-alfaburst

src/: ABServerMain.cpp  CMakeLists.txt
src/lib/: ABDataAdapter.h  CMakeLists.txt  DedispersionModule.h  RFI_Clipper.h  SigprocStokesWriter.h
src/lib/src/: ABDataAdapter.cpp  BandPass.cpp  DedispersionDataAnalysisOutput.cpp  DedispersionModule.cpp  RFI_Clipper.cpp  SigprocStokesWriter.cpp
src/lib/test/: CMakeLists.txt
src/pipelines/udpstream/: CMakeLists.txt
src/pipelines/udpstream/src/: ABBufPipeline.cpp  ABPipeline.cpp  SigprocPipeline.cpp
src/useful/: fitband2.py
